# rootsearch

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
docs/: data_sources_appendix.md  phase0_agent_workstreams.md  scientific_dependency_graph_spec.md
proto/: 01_sample_openalex.py  02_sample_arxiv.py  03_sample_pubmed.py  04_sample_grants.py  05_llm_extract_sample.py  06_mini_pipeline.py
src/rootsearch/: __init__.py  models.py
src/rootsearch/analysis/: scoring.py
src/rootsearch/extract/: edges.py  nodes.py
src/rootsearch/graph/: builder.py  dedup.py
src/rootsearch/ingest/: arxiv.py  grants.py  openalex.py  pubmed.py
