[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootsearch"
version = "0.1.0"
description = "Find the highest-leverage unsolved problems in science"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "networkx>=3.0",
    "sentence-transformers>=3.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["ipython", "jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["src/rootsearch"]
